# alma

./: .env.example  .gitignore  .pre-commit-config.yaml  .ruff.toml  README.md  docker-compose.dev.yml  docker-compose.yml
backend/: .dockerignore  .env.example  Dockerfile  LOGGING.md  README-docker.md  README.md  _path_setup.py  alembic.ini  create_tables.py  docker-compose.yml  mypy.ini  pyproject.toml  requirements.txt  run.py  setup.cfg
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_migration.py  0002_add_admin_user.py
backend/app/: __init__.py  main.py  py.typed
backend/app/api/: deps.py
backend/app/api/endpoints/: __init__.py  auth.py  leads.py
backend/app/core/: __init__.py  config.py  email.py  file_upload.py  logging_config.py  security.py
backend/app/core/storage/: __init__.py
backend/app/crud/: __init__.py  base.py  crud_user.py
backend/app/db/: __init__.py  base.py  database.py  declarative_base.py  deps.py  models.py
backend/app/models/: __init__.py  lead.py  user.py
backend/app/repositories/: __init__.py  base.py  lead.py
backend/app/schemas/: __init__.py  token.py
backend/app/services/: __init__.py  lead.py
backend/tests/: test_leads.py
docs/: PRD.md
frontend/: .dockerignore  Dockerfile  Dockerfile.dev  index.html  nginx.conf  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.css  App.tsx  index.css
frontend/src/components/: LeadForm.tsx  LeadsTable.tsx  Login.tsx  ProtectedRoute.tsx
frontend/src/config/: axios.ts
